- more toList() usages of stream having issues with samsung devices